--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- SweetAlert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -20,9 +21,9 @@
 </head>
 
 <body style="background-color: black;">
-
     <!-- Header -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-dark fixed-top" data-bs-theme="dark"
+        style="z-index: 99;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> Consulte DNI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,13 +34,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link active" aria-current="page" href="#"><button type="button"
+                                class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Brindame Apoyo <i class="fas fa-hand-holding-heart"></i>
+                            </button></a>
+                        <!-- Button trigger modal -->
                     </li>
                 </ul>
-
+                <audio id="myAudio" controls class="mx-2">
+                    <source src="./media/Coldplay_Viva_La_Vida_(Official_Video).mp3" type="audio/mp3">
+                    Tu navegador no soporta la reproducción de audio.
+                </audio>
             </div>
             <form class="d-flex" role="search">
                 <input id="dni" class="form-control me-2" type="search" placeholder="Ingrese DNI" aria-label="DNI" />
@@ -50,12 +55,42 @@
         </div>
     </nav>
 
-    <!-- Card -->
-    <div id="miDiv" class="card" style="background-color: black;">
-        <div class="card-header">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog  modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Si te nace, brindame Apoyo <i
+                            class="fas fa-hand-holding-heart"></i></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="card-group mx-3">
+                        <div class="card">
+                            <img src="./media/qr-yape.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">YAPE</h5>
+                            </div>
+                        </div>
+                        <div class="card mx-3">
+                            <img src="./media/qr-plin.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">PLIN</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <!-- Card -->
+    </div>
+    <div id="miDiv" class="card content-wrap" style="background-color: black;">
         <div class="card-body view-text">
-            <svg viewBox="0 0 600 200">
+            <svg viewBox="0 0 600 100">
                 <!-- Symbol-->
                 <symbol id="s-text">
                     <text id="recived" text-anchor="middle" x="50%" y="50%" dy=".35em"></text>
@@ -67,16 +102,86 @@
                 <use class="text" xlink:href="#s-text"></use>
                 <use class="text" xlink:href="#s-text"></use>
             </svg>
+            <svg viewBox="0 0 450 50">
+                <!-- Symbol-->
+                <symbol id="s2-text">
+                    <text id="static" text-anchor="middle" x="50%" y="50%" dy=".35em"></text>
+                </symbol>
+                <!-- Duplicate symbols-->
+                <use class="text" xlink:href="#s2-text"></use>
+                <use class="text" xlink:href="#s2-text"></use>
+                <use class="text" xlink:href="#s2-text"></use>
+                <use class="text" xlink:href="#s2-text"></use>
+                <use class="text" xlink:href="#s2-text"></use>
+            </svg>
+        </div>
+
+        <div class="contenedor">
+            <div class="bubbles">
+                <span style="--i: 18;"></span>
+                <span style="--i: 25;"></span>
+                <span style="--i: 12;"></span>
+                <span style="--i: 29;"></span>
+                <span style="--i: 14;"></span>
+                <span style="--i: 20;"></span>
+                <span style="--i: 17;"></span>
+                <span style="--i: 22;"></span>
+                <span style="--i: 13;"></span>
+                <span style="--i: 26;"></span>
+                <span style="--i: 11;"></span>
+                <span style="--i: 30;"></span>
+                <span style="--i: 16;"></span>
+                <span style="--i: 23;"></span>
+                <span style="--i: 10;"></span>
+                <span style="--i: 27;"></span>
+                <span style="--i: 15;"></span>
+                <span style="--i: 28;"></span>
+                <span style="--i: 19;"></span>
+                <span style="--i: 13;"></span>
+                <span style="--i: 26;"></span>
+                <span style="--i: 11;"></span>
+                <span style="--i: 19;"></span>
+            </div>
+
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="text-center text-white footer fixed-bottom" style="background-color: #000000;">
+        <!-- Grid container -->
+        <div class="container ">
+            <!-- Section: Social media -->
+            <section class="mb-0">
+                <!-- Instagram -->
+                <a class="btn btn-link btn-floating btn-lg text-light m-1 p-1 px-3"
+                    href="https://www.instagram.com/kenydanfer/" target="_blank" role="button"
+                    data-mdb-ripple-color="dark"><i class="fab fa-instagram"></i></a>
+                <!-- Linkedin -->
+                <a class="btn btn-link btn-floating btn-lg text-light m-1 p-1 px-3"
+                    href="https://www.linkedin.com/in/kenydanfer-developer/" target="_blank" role="button"
+                    data-mdb-ripple-color="dark"><i class="fab fa-linkedin"></i></a>
+                <!-- Github -->
+                <a class="btn btn-link btn-floating btn-lg text-light m-1 p-1 px-3"
+                    href="https://github.com/kenydanfer01" target="_blank" role="button" data-mdb-ripple-color="dark"><i
+                        class="fab fa-github"></i></a>
+                <a class="btn btn-link btn-floating btn-lg text-light m-1 p-1 px-3" href="" target="_blank"
+                    role="button" data-mdb-ripple-color="dark"><i class="far fa-file-code"></i></a>
+            </section>
+        </div>
+
+        <!-- Copyright -->
+        <div class="text-center text-light pb-1" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 - created with ❤ by @Kenydanfer
+        </div>
+    </footer>
+
 
     <!-- Bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script src="./index.js">
-    </script>
-
+    <script src="./index.js"> </script>
+    <script src="./audio.js"> </script>
 </body>
 
 </html>
