add styles for mobile

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <!-- Card -->
     </div>
     <div id="miDiv" class="card content-wrap" style="background-color: black;">
-        <div class="card-body view-text">
+        <div class="card-body view-text p-0">
             <svg viewBox="0 0 600 100">
                 <!-- Symbol-->
                 <symbol id="s-text">
